# working-set-monitoring

./: README.md
backend/: Cargo.toml
backend/src/: index.html  main.rs
backend/src/domain/: models.rs
backend/src/server/: handlers.rs
backend/src/winapi/: memory.rs  mod.rs  processes.rs
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/core/notifications/: index.ts  notification.service.ts
frontend/src/app/core/notifications/notification-list/: notification-list.component.html  notification-list.component.scss  notification-list.component.ts
frontend/src/app/core/websocket/: index.ts  websocket.service.ts
frontend/src/app/features/processes/: processes.routes.ts
frontend/src/app/features/processes/components/: index.ts
frontend/src/app/features/processes/models/: metrics.model.ts  process.model.ts
frontend/src/app/features/processes/pages/: index.ts
frontend/src/app/features/processes/services/: process.service.ts
frontend/src/app/features/processes/state/: heuristics.store.ts  index.ts  metrics.store.ts  processes.store.ts
frontend/src/app/shared/components/: index.ts
frontend/src/app/shared/components/filter-select/: filter-select.component.html  filter-select.component.scss  filter-select.component.spec.ts  filter-select.component.ts
frontend/src/app/shared/components/tabs/: tabs.component.html  tabs.component.scss  tabs.component.ts
(+22 files in other folders)
