[package]
name = "trabalho-final"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.8.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_SystemInformation"
] }
chrono = "0.4.42"
